# voice_assistance

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  app.py  check_setup.py  config.py  deploy.py  dspy_agent.py  main.py  memory_manager.py  neo4j_schema.py  pyproject.toml  requirements.txt  test_app.py  test_dspy.py  test_enhanced_system.py  test_simple.py
templates/: index.html
